<resources>
    <string name="app_name">An!me</string>

    <string name="ad_mob_app_id">ca-app-pub-7307290547259470~7830642737</string>

    <string-array name="footer">
        <item>ca-app-pub-7307290547259470/2376858278</item>
        <item>ca-app-pub-7307290547259470/9001497444</item>
        <item>ca-app-pub-7307290547259470/5307108097</item>
        <item>ca-app-pub-7307290547259470/8525754646</item>
    </string-array>

    <string-array name="interstitial">
        <item>ca-app-pub-7307290547259470/8912624262</item>
        <item>ca-app-pub-7307290547259470/2594627922</item>
        <item>ca-app-pub-7307290547259470/7455790528</item>
    </string-array>

    <string name="notification_channel">horrible.channel.new</string>
    <string name="full_hd">FullHD [1080p]</string>
    <string name="hd">HD [720p]</string>
    <string name="sd">SD [360p/480p]</string>
    <string name="horrible_subs">HorribleSubs</string>
    <string name="schedule">Weekly Schedule</string>
    <string name="schedule_">Schedule</string>
    <string name="favourites">Favourites</string>
    <string name="shows">Shows</string>
    <string name="all_shows">All Shows</string>
    <string name="current_shows">Ongoing</string>
    <string name="batches">Batches</string>
    <string name="episodes">Episodes</string>
    <string name="refresh">Refresh</string>
    <string name="latest_releases">Latest Releases</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="about_app">About App</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="others">Others</string>
    <string name="search">Search</string>
    <string name="empty_favourites">Favourite a show to be shown here.</string>
    <string name="empty_latest_releases">Latest releases aren\'t yet updated.</string>
    <string name="empty_today_s_schedule">Today\'s schedule aren\'t yet updated.</string>
    <string name="empty_search">No releases available</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="app_not_available">No application available to handle this action.</string>
    <string name="horrible_subs_url">https://horriblesubs.info/</string>
    <string name="disable_notify">This will disable new release notifications, You will not be able receive notifications on any new release.</string>
    <string name="enable_notify">This will enable new release notifications, You will receive notifications on every new release.</string>
    <string name="check_update">Check for update</string>
    <string name="updated">Your application is up to date</string>
    <string name="what_new">What\'s new</string>
    <string name="delete">Delete</string>
    <string name="random_pick">Random</string>
    <string name="explore">Explore</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="recent">Recent</string>
    <string name="description">Description</string>
    <string name="other_facts">Other Facts</string>
    <string name="source">Source</string>
    <string name="last_updated">Last Updated</string>
    <string name="view_more">View More</string>
    <string name="notification">Notification</string>
    <string name="back">Back</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="external_links">External Links</string>
    <string name="search_on_mal">Search on MyAnimeList</string>
    <string name="search_on_nyaa">Search on Nyaa</string>
    <string name="remove_fav">Remove from Favourites</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="top_anime">Top Anime</string>
    <string name="most_watched">Most Watched</string>
    <string name="accept_continue">Accept &amp; Continue</string>
    <string name="privacy_policy_tnc">Read privacy policy before continuing the app &amp; requesting permission.</string>
    <string name="tag_line">A Better Ongoing</string>
    <string name="welcome_text">Welcome to An!me, a key to Anime World\nIntuitive way of Streaming &amp; Downloading Anime\nDesigned to provide better ongoing experience\nWith Added Support to MyAnimeList.</string>
    <string name="member_exclusive_feature">Member Exclusive Feature</string>
    <string name="exclusive_feature">This feature is only available for logged in users.\nLogin or Register to An!me &amp; experience whole bunch of features including torrent streaming, list management, favourites &amp; more.</string>
    <string name="sign_in_or_register">Sign in or Register</string>
    <string name="app_notifications">Latest News &amp; Notifications</string>
    <string name="help_text_1">Tap once to open or Touch &amp; hold to view more.</string>
    <string name="release_time">Release Time</string>
    <string name="time_left">Time Left</string>
    <string name="top_rated">Top Rated</string>
    <string name="top_viewed">Top Viewed</string>
    <string name="top_favourite">Top Favourite</string>
    <string name="most_members">Most Members</string>
    <string name="trending">Trending</string>
    <string name="view_on_mal">View on MyAnimeList</string>

    <string-array name="type">
        <item>Random</item>
        <item>Top Rated</item>
        <item>Top Viewed</item>
        <item>Top Favourite</item>
        <item>Most Members</item>
    </string-array>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>To be Scheduled</item>
    </string-array>

</resources>