<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"
        android:id="@+id/explore"
        tools:checked="true" />

    <item
        android:icon="@drawable/ic_bookmarks"
        android:id="@+id/bookmarked"
        android:title="@string/bookmarked" />

    <item
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule"
        android:id="@+id/schedule" />

    <item
        android:icon="@drawable/ic_list"
        android:title="@string/shows"
        android:id="@+id/shows" />

    <item
        android:icon="@drawable/ic_menu_horiz"
        android:title="@string/settings"
        android:id="@+id/settings" />

</menu>