<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:icon="@drawable/ic_refresh"
        android:id="@+id/refresh"
        android:title="@string/refresh" />

    <item
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/view_in_browser"
        android:id="@+id/browser" />

    <item
        android:icon="@drawable/ic_theme"
        android:title="@string/toggle_theme"
        android:id="@+id/theme"
        android:enabled="false"
        android:visible="false"
        tools:visible="true" />

    <item
        android:icon="@drawable/ic_left"
        android:enabled="false"
        android:visible="false"
        android:id="@+id/exit"
        android:title="@string/back"
        tools:visible="true" />

</menu>