<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageButton
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_close"
        android:tint="?colorOnSurface"
        android:layout_gravity="end"
        android:id="@+id/button1"
        android:padding="18dp" />

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="28dp"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:id="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:id="@+id/textView1"
        android:textStyle="bold|italic"
        android:typeface="sans" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center"
        android:text="@string/tag_line"
        android:id="@+id/textView2"
        android:typeface="sans" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toTopOf="@id/button2"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lineSpacingMultiplier="1.45"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:gravity="center"
        android:padding="7dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/privacy_policy_tnc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:textStyle="italic"
        android:id="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/accept_continue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:textAllCaps="false"
        android:id="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>
