<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/other_facts"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:id="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintBottom_toBottomOf="@id/textView1"
        app:layout_constraintTop_toTopOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?textAppearanceBody2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:id="@+id/view1"
        android:text="@string/source"
        android:padding="2dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/horrible_subs"
        android:id="@+id/textView1"
        android:textSize="13sp"
        android:padding="2dp" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?textAppearanceBody2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/last_updated"
        android:textSize="12sp"
        android:id="@+id/view2"
        android:padding="2dp" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        tools:text="@tools:sample/date/ddmmyy"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:id="@+id/textView2"
        android:textSize="13sp"
        android:padding="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
