<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/episodes"
        android:layout_marginTop="8dp"
        android:id="@+id/textView1" />

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/empty_search"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="12dp"
        android:id="@+id/textView2"
        android:textSize="13sp"
        tools:visibility="gone"
        android:padding="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recycler_e"
        android:id="@+id/recyclerView"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        tools:itemCount="2" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:text="@string/view_more"
        android:id="@+id/button"
        android:minHeight="40dp"
        android:textSize="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>